[package]
name = "hamt-rs"
version = "0.2.0"
authors = [ "michaelwoerister@posteo.net" ]
description = "A Hash Array Mapped Trie implementation based on the *Ideal Hash Trees* paper by Phil Bagwell."
readme = "README.md"
repository = "https://github.com/michaelwoerister/hamt-rs"
keywords = ["hamt", "persistent", "datastructure", "trie"]
license = "MIT"

[dependencies]
libc = "*"
rand = "0.3.9"
