[package]
name = "hamt-rs"
version = "0.2.2"
authors = [ "Michael Woerister" ]
description = "A Hash Array Mapped Trie implementation based on the *Ideal Hash Trees* paper by Phil Bagwell."
readme = "README.md"
repository = "https://github.com/michaelwoerister/hamt-rs"
keywords = ["hamt", "persistent", "datastructure", "trie", "hash"]
license = "MIT"

[dependencies]
libc = "^0.2"
rand = "^0.3.9"

[features]
# Use Rust's unstable allocation API. Only works on nightly.
rust_alloc = []

# Use this if you want to get rid of the SipHasher deprecation warning.
hashmap_default_hasher = []
