[package]
name = "hamt-rs"
version = "0.3.0"
authors = [ "Michael Woerister" ]
description = "A Hash Array Mapped Trie implementation based on the *Ideal Hash Trees* paper by Phil Bagwell."
readme = "README.md"
repository = "https://github.com/michaelwoerister/hamt-rs"
keywords = ["hamt", "persistent", "datastructure", "trie", "hash"]
license = "MIT"

[dependencies]
libc = "^0.2"
[dev-dependencies]
rand = "^0.3.9"
